# voxelnaut

./: Cargo.toml  README.md
.github/workflows/: build.yml
ai/: Cargo.toml
ai/src/: behavior.rs  lib.rs  mob.rs  mobs.rs  pathfinding.rs
assets/: Cargo.toml
assets/src/: lib.rs
audio/: Cargo.toml
audio/src/: audio.rs  lib.rs  manager.rs  music.rs  sounds.rs
core/: Cargo.toml
core/src/: block.rs  config.rs  entity.rs  events.rs  init.rs  item.rs  lib.rs  logging.rs  math.rs  world.rs
gameplay/: Cargo.toml
gameplay/src/: crafting.rs  dimensional.rs  inventory.rs  lib.rs  survival.rs
launcher/: Cargo.toml
launcher/src/: game.rs  lib.rs  main.rs
net/: Cargo.toml
net/src/: anti_cheat.rs  lib.rs  networking.rs  p2p.rs  protocol.rs  stun.rs  sync.rs
physics/: Cargo.toml
physics/src/: collision.rs  lib.rs  movement.rs  physics.rs
render/: Cargo.toml
render/src/: camera.rs  fluid.rs  lib.rs  lighting.rs  mesh.rs  renderer.rs  shader.rs  shader.wgsl  texture.rs
scripts/: build.ps1
tools/: Cargo.toml
tools/src/: lib.rs  terrain_tool.rs
ui/: Cargo.toml
ui/src/: hud.rs  inventory_ui.rs  lib.rs  menu.rs  rendering.rs  settings.rs
world/: Cargo.toml
world/src/: biome.rs  chunk.rs  dimensions.rs  generator.rs  lib.rs  persistence.rs  storage.rs
