[workspace]
resolver = "2"
members = [
    "core",
    "world",
    "render",
    "physics",
    "gameplay",
    "ai",
    "net",
    "ui",
    "audio",
    "assets",
    "tools",
    "launcher",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VoxelNaut Team"]
license = "MIT OR Apache-2.0"
description = "VoxelNaut - A complete voxel sandbox game"
repository = "https://github.com/voxelnaut/voxelnaut"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
lazy_static = "1.4"
slotmap = "1.0"
noise = "0.9"
chrono = "0.4"
thiserror = "1.0"
dirs = "5.0"
wgpu = "0.19"
bytemuck = "1.0"
winit = "0.30"
egui = "0.28"
tokio = { version = "1.0", features = ["full"] }
rodio = "0.19"
bincode = "1.3"

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[patch.crates-io]