[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[features]
default = []
game = []

[dependencies]
core = { path = "../core" }
world = { path = "../world" }
render = { path = "../render" }
physics = { path = "../physics" }
gameplay = { path = "../gameplay" }
ai = { path = "../ai" }
net = { path = "../net" }
ui = { path = "../ui" }
audio = { path = "../audio" }
assets = { path = "../assets" }
env_logger = "0.11"
log = "0.4"
parking_lot = "0.12"

[lib]
name = "launcher"
path = "src/lib.rs"

[[bin]]
name = "voxelnaut"
path = "src/main.rs"